log
Wed, Apr 16, 2025  8:17:30 AM: 
 tests:  0|6
total_score: 0/70
eeef3b7
Wed, Apr 16, 2025  8:28:12 AM: 
 hashmap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
91b49f8
Wed, Apr 16, 2025  8:55:35 AM: 
 hashmap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 10/70
1a313c4
Wed, Apr 16, 2025  8:58:41 AM: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:79:9: error: expected ';' before 'return'
         return current;
         ^~~~~~
7c4a293
Wed, Apr 16, 2025  8:59:03 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 10/70
14a5dc3
Wed, Apr 16, 2025  9:04:44 AM: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:84:13: error: 'true' undeclared (first use in this function)
     } while(true);
             ^~~~
hashmap.c:84:13: note: each undeclared identifier is reported only once for each function it appears in
bc369b2
Wed, Apr 16, 2025  9:04:52 AM: 
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:84:13: error: 'true' undeclared (first use in this function)
     } while(true);
             ^~~~
hashmap.c:84:13: note: each undeclared identifier is reported only once for each function it appears in
95add45
Wed, Apr 16, 2025  9:21:09 AM: 
 hashmap.c | 18 +++++-------------
 1 file changed, 5 insertions(+), 13 deletions(-)
 tests:  4|4
total_score: 20/70
c77e265
Wed, Apr 16, 2025  9:24:12 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|4
total_score: 20/70
4208e43
Wed, Apr 16, 2025  7:46:50 PM: 
 hashmap.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  8|3
total_score: 40/70
00e7934
Wed, Apr 16, 2025  7:57:50 PM: 
 hashmap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  0|0
7b550c7
Wed, Apr 16, 2025  7:58:25 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
47c113e
Wed, Apr 16, 2025  7:59:00 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
07331f4
Wed, Apr 16, 2025  8:02:45 PM: 
 hashmap.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  9|2
total_score: 50/70
2ba7738
Wed, Apr 16, 2025  9:41:11 PM: 
 hashmap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'eraseMap':
hashmap.c:103:9: error: this 'if' clause does not guard... [-Werror=misleading-indentation]
         if (map->buckets[pos]->key != NULL && is_equal(map->buckets[pos]->key,key));{
         ^~
hashmap.c:103:85: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'if'
         if (map->buckets[pos]->key != NULL && is_equal(map->buckets[pos]->key,key));{
                                                                                     ^
cc1.exe: all warnings being treated as errors
fff46a8
Wed, Apr 16, 2025  9:42:09 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|2
total_score: 50/70
6ec5832
Wed, Apr 16, 2025  9:45:40 PM: 
 hashmap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'eraseMap':
hashmap.c:116:39: error: 'value' undeclared (first use in this function)
     Pair *nuevoPair = createPair(key, value);
                                       ^~~~~
hashmap.c:116:39: note: each undeclared identifier is reported only once for each function it appears in
a838938
Wed, Apr 16, 2025  9:47:20 PM: 
 hashmap.c | 18 ++++--------------
 1 file changed, 4 insertions(+), 14 deletions(-)
 tests:  9|2
total_score: 50/70
abce403
